--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Afficher les requêtes SQL dans la console
 spring.jpa.show-sql=true
+
+# Log de Spring Boot
+logging.level.org.springframework.security=DEBUG
+logging.level.com.example=DEBUG
