--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,3 +13,9 @@ spring.jpa.show-sql=true
 # Log de Spring Boot
 logging.level.org.springframework.security=DEBUG
 logging.level.com.example=DEBUG
+logging.level.com.example.todolist_backend.util.JwtFilter=INFO
+
+# test ecriture fichier log
+logging.file.name=logs/application.log
+logging.file.max-size=10MB
+logging.file.max-history=30
