--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Configuration de la base de données PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/todolistDB
+spring.datasource.url=jdbc:postgresql://db:5432/todolistDB
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
