mis en place du middleware + env secret

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,3 +19,6 @@ logging.level.com.example.todolist_backend.util.JwtFilter=INFO
 logging.file.name=logs/application.log
 logging.file.max-size=10MB
 logging.file.max-history=30
+
+# clé de sécurité
+jwt.secret.key="wK2kF8pdQ7Su4/ZXE8n8QzN0TpZgRycLflRJEsH9WvE="
