--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,25 +1,18 @@
-# Étape 1 : Utiliser une image Maven pour construire l'application
-FROM maven:latest AS build
+# Étape 1 : Utiliser une image Maven pour construire et exécuter l'application
+FROM maven:latest
 
 # Définir le répertoire de travail
 WORKDIR /app
 
 # Copier le fichier pom.xml et télécharger les dépendances
-COPY pom.xml .
+COPY pom.xml ./
+RUN mvn dependency:go-offline
+
+# Copier le code source
 COPY src ./src
-RUN mvn clean package -DskipTests
-
-# Étape 2 : Utiliser une image OpenJDK pour exécuter l'application
-FROM openjdk:17-jdk-slim
-
-# Définir le répertoire de travail
-WORKDIR /app
-
-# Copier le fichier JAR construit à partir de l'étape précédente
-COPY --from=build /app/target/*.jar app.jar
 
 # Exposer le port sur lequel l'application écoute
 EXPOSE 8080
 
-# Commande pour exécuter l'application
-ENTRYPOINT ["java", "-jar", "app.jar"]
+# Commande pour exécuter l'application en mode développement
+CMD ["mvn", "spring-boot:run"]
