--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - 8080:8080
     volumes:
       - ./backend/src:/app/src
+      - ~/.m2:/root/.m2
     env_file:
       - ./global.env
       - .env
